--- a/src/index.css
+++ b/src/index.css
@@ -31,6 +31,9 @@ body {
     text-align: center;
     width: 34px;
   }
+  .negrito{
+    border: 2px solid #000;
+  }
   
   .square:focus {
     outline: none;
