Adicionar um botão de toggle que lhe permita ordenar os jogadas em ordem ascendente ou descendente.

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -17,6 +17,10 @@ body {
     margin-bottom: 10px;
   }
   
+  .menu-order{
+    margin-top: 10px;
+  }
+
   .square {
     background: #fff;
     border: 1px solid #999;
